# apps/api/src/settings/schemas/update-settings.schema.ts
@@ -2,6 +2,7 @@ import { Type } from "@sinclair/typebox";
 
 import {
   adminSettingsJSONContentSchema,
+  globalSettingsJSONContentSchema,
   studentSettingsJSONContentSchema,
 } from "./settings.schema";
 
@@ -11,4 +12,7 @@ export const updateSettingsBodySchema = Type.Partial(
   Type.Union([studentSettingsJSONContentSchema, adminSettingsJSONContentSchema]),
 );
 
+export const updateGlobalSettingsBodySchema = Type.Partial(globalSettingsJSONContentSchema);
+
 export type UpdateSettingsBody = Static<typeof updateSettingsBodySchema>;
+export type UpdateGlobalSettingsBody = Static<typeof updateGlobalSettingsBodySchema>;
