# apps/api/src/settings/settings.controller.ts
@@ -2,13 +2,23 @@ import { Controller, Get, Body, Patch, UseGuards, Put } from "@nestjs/common";
 import { Validate } from "nestjs-typebox";
 
 import { UUIDType, baseResponse, BaseResponse } from "src/common";
+import { Public } from "src/common/decorators/public.decorator";
 import { Roles } from "src/common/decorators/roles.decorator";
 import { CurrentUser } from "src/common/decorators/user.decorator";
 import { RolesGuard } from "src/common/guards/roles.guard";
 import { USER_ROLES } from "src/user/schemas/userRoles";
 
-import { settingsJSONContentSchema, type SettingsResponse } from "./schemas/settings.schema";
-import { UpdateSettingsBody, updateSettingsBodySchema } from "./schemas/update-settings.schema";
+import {
+  globalSettingsJSONContentSchema,
+  settingsJSONContentSchema,
+  type SettingsResponse,
+} from "./schemas/settings.schema";
+import {
+  UpdateGlobalSettingsBody,
+  updateGlobalSettingsBodySchema,
+  UpdateSettingsBody,
+  updateSettingsBodySchema,
+} from "./schemas/update-settings.schema";
 import { SettingsService } from "./settings.service";
 
 @Controller("settings")
@@ -45,5 +55,26 @@ export class SettingsController {
   ): Promise<BaseResponse<SettingsResponse>> {
     const result = await this.settingsService.updateAdminNewUserNotification(userId);
     return new BaseResponse(result);
+  }
+
+  @Get("global")
+  @Public()
+  @Validate({
+    response: baseResponse(globalSettingsJSONContentSchema),
+  })
+  async getGlobalSettings() {
+    const settings = await this.settingsService.getGlobalSettings();
+    return new BaseResponse(settings);
+  }
+
+  @Patch("global")
+  @Roles(USER_ROLES.ADMIN)
+  @Validate({
+    request: [{ type: "body", schema: updateGlobalSettingsBodySchema }],
+    response: baseResponse(globalSettingsJSONContentSchema),
+  })
+  async updateGlobalSettings(@Body() updatedSettings: UpdateGlobalSettingsBody) {
+    const settings = await this.settingsService.updateGlobalSettings(updatedSettings);
+    return new BaseResponse(settings);
   }
 }
